# Ametrite

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  rust-toolchain.toml
.claude/skills/ametrite/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/web/: index.html  package.json  server.ts
apps/web/src/: app.ts  style.css
crates/amt/: Cargo.toml
crates/amt/examples/: bench.rs
crates/amt/src/: db.rs  error.rs  export.rs  git.rs  lib.rs  main.rs  mcp.rs  model.rs  registry.rs  store.rs  upgrade.rs  wikilink.rs
crates/amt/tests/: engine.rs  git_integration.rs
