[workspace]
resolver = "2"
members = ["crates/amt"]

[workspace.package]
# cargo-dist requires the git tag to match this version exactly (a `v0.1.0` tag
# needs version `0.1.0`). Verify with `dist plan --tag=<tag>` before tagging.
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Davidb3l/Ametrite"
homepage = "https://github.com/Davidb3l/Ametrite"

[profile.release]
lto = true
strip = true

# Release engineering (AMT-19). `dist generate` regenerates
# .github/workflows/release.yml from this config; a `v*` tag builds binaries for
# every target, publishes a GitHub Release with shell/PowerShell installers, and
# pushes a formula to the Homebrew tap.
#
# Publishing to the tap needs a HOMEBREW_TAP_TOKEN repo secret (a PAT with
# contents:write on Davidb3l/homebrew-tap) — the default GITHUB_TOKEN cannot
# write to another repository.
[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
tap = "Davidb3l/homebrew-tap"
publish-jobs = ["homebrew"]
# Tag pushes are the only release trigger; PRs never publish.
pr-run-mode = "plan"

# cargo-dist builds with this profile; inherit our optimized release settings.
[profile.dist]
inherits = "release"
lto = "thin"
